# src/routes/auth/authRoutes.js
@@ -1,6 +1,6 @@
 const express = require('express');
 const router = express.Router();
-const { authRegister, authLogin, authVerifyOtp } = require('../../controllers/authController'); // require AuthController
+const { authRegister, authLogin, authVerifyOtp } = require('../../controllers/auth/authController'); // require AuthController
 
 // @ENDPOINT = http://localhost:3715/api_m/
 router.post('/authRegister', authRegister);
